--- a/index.css
+++ b/index.css
@@ -6,6 +6,16 @@ body {
   margin: 0;
   background-color: #f0f0f0;
 }
-canvas {
+
+.canvas-container {
+  max-width: 1500px;
+  max-height: 900px;
+  overflow: hidden;
   border: 1px solid black;
+  border-radius: 4px;
+  margin: 6px 6px 6px 6px;
+}
+
+canvas {
+  border: 0px solid black;
 }
