--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,10 @@
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
   background-color: #f0f0f0;
 }
 
 .canvas-container {
   max-width: 1500px;
-  max-height: 900px;
+  max-height: 840px;
   overflow: hidden;
   border: 1px solid black;
   border-radius: 4px;
@@ -18,7 +13,6 @@ body {
 
 canvas {
   display: block;
-  border: 0px solid black;
 }
 
 .main-content {
@@ -49,10 +43,10 @@ canvas {
 }
 
 .local-storage-item {
-  background-color: #f0f0f0; /* Background color */
-  width: 100%; /* Full width */
+  background-color: #f0f0f0;
+  width: 100%;
   text-align: center;
-  cursor: pointer; /* Pointer cursor on hover */
+  cursor: pointer;
 }
 
 .local-storage-item:hover {
@@ -85,7 +79,7 @@ canvas {
   fill: #007bff;
 }
 
-.context-menu {
+.circle-context-menu {
   display: none;
   position: absolute;
   z-index: 1000;
@@ -95,18 +89,18 @@ canvas {
   padding: 5px 0;
 }
 
-.context-menu ul {
+.circle-context-menu ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-.context-menu ul li {
+.circle-context-menu ul li {
   padding: 8px 12px;
   cursor: pointer;
 }
 
-.context-menu ul li:hover {
+.circle-context-menu ul li:hover {
   background-color: #eee;
 }
 
