--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,8 @@ body {
 
 .canvas-container {
   max-width: 1500px;
-  max-height: 840px;
+  /* max-height: 840px; */
+  max-height: 91vh;
   overflow: hidden;
   border: 1px solid black;
   border-radius: 4px;
