--- a/css/index.css
+++ b/css/index.css
@@ -41,6 +41,10 @@ canvas {
   fill: #333;
 }
 
+#circle-radius-input {
+  width: 40px;
+}
+
 .menu-item:hover .icon,
 .svg-text:hover {
   fill: #007bff;
