--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ body {
   background-color: #f0f0f0;
 }
 
-.canvas-container {
+#canvas-container {
   max-width: 82vw; /* 90% of the viewport width */
   max-height: 90.5vh; /* 90.5% of the viewport height */
   overflow: hidden;
