--- a/css/localstorage.css
+++ b/css/localstorage.css
@@ -7,8 +7,16 @@
   min-width: 250px;
 }
 
+.local-storage-item-name {
+  text-align: left; /* Ensure the text aligns to the left */
+  padding-left: 10px; /* Add padding to the left for better alignment */
+  flex-grow: 1; /* Allow the span to take the necessary width */
+}
+
 .local-storage-name {
-  text-align: center;
+  text-align: center; /* Ensure the text aligns to the left */
+  padding-left: 10px; /* Add padding to the left for better alignment */
+  margin-bottom: 3px;
   border-bottom: 1px solid #ccc;
 }
 
@@ -27,15 +35,11 @@
   cursor: pointer;
   display: flex;
   justify-content: flex-start;
+  align-items: center; /* Center items vertically */
 }
 
 .local-storage-item .button-local-storage {
   margin-left: 5px;
-}
-
-.local-storage-item::before {
-  content: "";
-  flex-grow: 1;
 }
 
 .local-storage-item:hover {
