--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,11 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #f7f7f7;
   overflow: hidden;
