--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,9 +11,22 @@ body {
   overflow: hidden;
 }
 
+.main-content {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+}
+
+.content-container {
+  flex-grow: 20;
+  width: 0;
+  height: 100%;
+  min-width: 86.5vw;
+}
+
 #canvas-container {
-  max-width: 82vw;
-  max-height: 89.75vh;
+  max-width: 100%;
+  height: 92%;
   overflow: hidden;
   border: 1px solid #ccc;
   border-radius: 8px;
