--- a/public/css/localstorage.css
+++ b/public/css/localstorage.css
@@ -1,23 +1,14 @@
 .storage-container {
+  flex-grow: 1;
   display: block;
   background-color: #ffffff;
   margin: 10px;
+  margin-left: 0;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
-  min-width: 275px;
+  /* min-width: 275px; */
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-}
-
-.local-storage-item-name {
-  text-align: left;
-  padding-left: 12px;
-  flex-grow: 1;
-  color: #333;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-size: 16px !important;
 }
 
 .local-storage-name {
@@ -28,6 +19,7 @@
   color: #555;
   font-weight: 600;
   overflow: hidden;
+  max-width: 100%;
 }
 
 .local-storage-list {
@@ -41,11 +33,11 @@
 }
 
 .local-storage-item {
-  background-color: #ffffff;
-  width: 100%;
-  cursor: pointer;
   display: flex;
   justify-content: flex-start;
+  background-color: #ffffff;
+  max-width: 100%;
+  cursor: pointer;
   align-items: center;
   padding: 0px 0px;
   border-radius: 8px;
@@ -54,12 +46,24 @@
   overflow: hidden;
 }
 
+.local-storage-item-name {
+  flex-grow: 20;
+  text-align: left;
+  padding-left: 12px;
+  color: #333;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-size: 13px !important;
+}
+
 .button-local-storage {
+  flex-grow: 1;
   background-color: #ffffff;
   color: #555;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
-  padding: 8px 16px;
+  padding: 6px 12px;
   margin-left: 6px;
   cursor: pointer;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
