--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,6 +25,8 @@ body {
 }
 
 #canvas-container {
+  transform: scale(1); /* Adjust this value as needed */
+  transform-origin: 0 0;
   max-width: 100%;
   height: 92%;
   overflow: hidden;
