--- a/public/css/nodecontextmenu.css
+++ b/public/css/nodecontextmenu.css
@@ -1,4 +1,4 @@
-.node-context-menu {
+.context-menu {
   display: none;
   position: absolute;
   z-index: 1000;
@@ -8,17 +8,17 @@
   padding: 5px 0;
 }
 
-.node-context-menu ul {
+.context-menu ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-.node-context-menu ul li {
+.context-menu ul li {
   padding: 8px 12px;
   cursor: pointer;
 }
 
-.node-context-menu ul li:hover {
+.context-menu ul li:hover {
   background-color: #eee;
 }
