--- a/public/css/uppermenu.css
+++ b/public/css/uppermenu.css
@@ -32,7 +32,8 @@
 
 .menu-item:hover .icon,
 .svg-text:hover {
-  fill: #007bff;
+  /* fill: #007bff; */
+  fill: rgb(41, 41, 41);
 }
 
 #circle-radius-input {
